# rdrop

./: .env  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  tests.rs  utils.rs
