[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""a utility for opening and closing applications"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="rdrop"
repository ="https://github.com/thor314/rdrop"
version    ="0.1.0"

[dependencies]
anyhow="1.0"
log   ="0.4"

thiserror ="1.0"
env_logger="0.10"
dotenv    ="0.15"

clap={ version="4.4.16", features=["derive"] }

[dev-dependencies]

criterion="0.5"
rstest   ="0.18" # testing convenience proc-macros

arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive
